--- a/style/details.scss
+++ b/style/details.scss
@@ -1,3 +1,9 @@
+%ell {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 @font-face {
     font-family: iconfont;
     src: url('../font/iconfont.eot') format('embedded-opentype'), url('../font/iconfont.woff') format('woff'), url('../font/iconfont.ttf') format('truetype'), url('../font/iconfont.svg') format('svg')
@@ -11,6 +17,8 @@
 }
 
 * {
+    margin: 0;
+    padding: 0;
     color: #666;
 }
 
@@ -398,15 +406,16 @@ a {
                 overflow: hidden;
                 position: relative;
                 left: 10px;
-                 display: none;
+                z-index: 50;
+                display: none;
             }
             #bpic {
-                    width:800px;
-                    height: 640px;
-                    position: absolute;
-                    left: 0px;
-                    top: 0px;
-                }
+                width: 800px;
+                height: 640px;
+                position: absolute;
+                left: 0px;
+                top: 0px;
+            }
         }
         img {
             border: 0;
@@ -431,66 +440,62 @@ a {
             position: absolute;
             left: 0px;
             top: 0px;
-             display: none;
+            display: none;
         }
-        .spec-list {
+        #ulist {
             position: absolute;
-            left:0;
-            top:390px;
-            width: 310px;
-            height: 54px;
+            left: 0px;
+            bottom: 15px;
+            width: 402px;
+            height: 56px;
             overflow: hidden;
-//          padding: 0 20px 0 34px;
-//          float: left;
-            .spec-control {
-                float: left;
-//              display: block;
-//              position: absolute;
-//              top: 0;
-                width: 14px;
-                height: 50px;
-                background: url('../img/newicon20140910.png') no-repeat 0 0;
-            }
-            .spec-items {
-                float: left;
-                position: absolute;
-                width: 310px;
-                height: 50px;
-//              overflow: hidden;
-//              top: 0;
-//              left: 36px;
-            }
-            ul {
-                float: left;
-                position: absolute;
-//              width: 372px;
-//              height: 50px;
-                top: 0px;
-                left: 0px;
-                 li {
-                     float: left;
-                width: 62px;
-                height: 50px;
-//              position: relative;
-                img {
-                    width: 50px;
-                    height: 50px;
-                    padding: 2px;
-                    display: block;
-                }
-            }
-            }
-           
-            #left {
-                left: 14px;
-                //              background-position: 0 -346px;
-                background-position: -56px -346px;
-            }
-            #right {
-                right: 0;
-                background-position: -14px -346px;
-                //              background-position: -70px -346px;
-            }
+        }
+        #ulist a {
+            float: left;
+            width: 10px;
+            height: 54px;
+            border: 1px solid #ccc;
+            text-decoration: none;
+            line-height: 56px;
+            text-align: center;
+            background: #fff;
+        }
+        #list {
+            float: left;
+            margin-left: 18px;
+            width: 372px;
+            position: relative;
+        }
+        ul {
+            list-style: none;
+            float: left;
+            position: absolute;
+            left: 0px;
+            top: 0px;
+        }
+        ul li {
+            float: left;
+            width: 56px;
+            height: 56px;
+            padding-right: 6px;
+        }
+        ul li img {
+            width: 52px;
+            height: 52px;
+            border: 1px solid #ccc;
+        }
+        #right {
+            position: absolute;
+            right: 0px;
+            top: 0px;
+            color: #333;
+        }
+        #left {
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            z-index: 2;
+            color: #fff;
         }
         .report-btn {
             font-size: 12px;
@@ -538,9 +543,277 @@ a {
     }
     .item-ext {
         width: 244px;
-        float: left;
         margin-left: -244px;
         overflow: hidden;
         background: #fff;
+    }
+    #itemInfo {
+        position: relative;
+        width: 100%;
+    }
+    #name {
+        padding: 15px 10px 10px 0;
+        h1 {
+            line-height: 1.5em;
+            overflow: hidden;
+            font-weight: 700;
+            font-family: arial, "microsoft yahei";
+            font-size: 16px;
+        }
+        .p-ad {
+            font-family: arial, "microsoft yahei";
+            color: #e3393c;
+            font-size: 14px;
+            line-height: 20px;
+            word-break: break-all;
+        }
+        .p-author {
+            padding-top: 10px;
+            line-height: 20px;
+            padding-bottom: 8px;
+            a {
+                color: #005aa0;
+            }
+        }
+    }
+    #summary {
+        width: 100%;
+        position: relative;
+        z-index: 3;
+        #summary-price {
+            padding-top: 10px;
+            padding-bottom: 0;
+            padding-right: 81px;
+            line-height: 30px;
+            background: #f7f7f7;
+            .dd {
+                width: 432px;
+                .p-price {
+                    display: inline-block;
+                    vertical-align: middle;
+                    color: #e4393c;
+                    font-size: 20px;
+                }
+                .p-discount {
+                    margin-left: 3px;
+                }
+                .pricing {
+                    color: #999;
+                }
+                del {
+                    text-decoration: line-through;
+                }
+            }
+        }
+        .summary-top {
+            position: relative;
+            padding: 0 0 10px;
+            margin-bottom: 10px;
+            background: #f7f7f7;
+        }
+        #summary2 {
+            position: relative;
+            width: 516px;
+            background: #f7f7f7;
+            height: 60px;
+        }
+        .dt {
+            float: left;
+            width: 72px;
+            display: inline;
+            text-align: right;
+            font-family: simsun;
+        }
+        #summary4 {
+            .dt {}
+            a {
+                color: #e4393c;
+                margin: 0 6px;
+            }
+        }
+        #summary2,
+        #summary3,
+        #summary4 {
+            padding-top: 10px;
+        }
+    }
+}
+
+.box2 {
+    margin: 20px;
+    height: 267px;
+    margin-bottom: 50px;
+    .wrap {
+        border: 2px solid #666;
+    }
+    .renqi {
+        height: 30px;
+        background: #ACACAC;
+        a {
+            height: 34px;
+            line-height: 34px;
+            padding: 0 12px;
+            border-left: 1px solid #ddd;
+            border-right: 1px solid #ddd;
+            border-top:2px solid red;
+            color: #e4393c;
+            background: white;
+            padding: 5px;
+        }
+    }
+    .mclist {
+        margin-top: 10px;
+        ul {
+            height: 235px;
+            display: flex;
+            justify-content: space-around;
+            li {
+                margin-left: 10px;
+            }
+        }
+    }
+}
+
+#footer {
+    height: 500px;
+    background-color: #eaeaea;
+    padding-bottom: 67px;
+    .mod_service {
+        padding: 30px 0;
+        border-bottom: 1px solid #dedede;
+        ul {
+            overflow: hidden;
+            height: 42px;
+            li {
+                float: left;
+                width: 297px;
+            }
+        }
+    }
+    .mod_service_unit {
+        position: relative;
+        margin: 0 auto;
+        padding-left: 45px;
+        width: 180px;
+        p {
+            @extend %ell;
+            width: 100%;
+            height: 42px;
+            line-height: 42px;
+            font-size: 18px;
+            font-weight: 700;
+            color: #444;
+        }
+    }
+    .mod_service_tit {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 36px;
+        height: 42px;
+        background-image: url(//misc.360buyimg.com/mtd/pc/index/2.0.0/home/images/ico_service.png);
+        text-indent: -999px;
+    }
+    .mod_service_duo {
+        background-position: 0 0;
+    }
+    .mod_service_kuai {
+        background-position: 0 -43px;
+    }
+    .mod_service_hao {
+        background-position: 0 -86px;
+    }
+    .mod_service_sheng {
+        background-position: 0 -129px;
+    }
+    .mod_help {
+        padding: 20px 0;
+    }
+    .mod_help_list {
+        overflow: hidden;
+        height: 160px;
+        .mod_help_nav {
+            float: left;
+            width: 198px;
+            line-height: 22px;
+            a {
+                color: #666;
+            }
+        }
+        .mod_help_nav_tit {
+            margin-bottom: 5px;
+            font-size: 14px;
+        }
+    }
+    .mod_help_cover {
+        float: right;
+        width: 200px;
+        height: 150px;
+        background: url(//misc.360buyimg.com/mtd/pc/index/2.0.0/home/images/ico_footer.png) no-repeat 0 0;
+    }
+    .mod_help_cover_tit {
+        margin-bottom: 15px;
+        font-size: 14px;
+        text-align: center;
+    }
+    .mod_help_cover_con {
+        padding: 0 10px;
+    }
+    .mod_help_cover_more {
+        text-align: right;
+        a {
+            color: #666;
+        }
+    }
+    .mod_copyright_inner {
+        padding: 15px 0;
+        border-top: 1px solid #e1e1e1;
+        text-align: center;
+        a {
+            color: #666;
+        }
+    }
+    .mod_copyright_split {
+        margin: 0 10px;
+        color: #ccc;
+    }
+    .mod_copyright_info {
+        padding: 10px 0;
+        line-height: 22px;
+        color: #999;
+        span {
+            font-size: 12px;
+        }
+        a {
+            color: #999;
+        }
+    }
+    .mod_copyright_auth_ico {
+        overflow: hidden;
+        display: inline-block;
+        margin: 0 3px;
+        width: 103px;
+        height: 32px;
+        background-image: url(//misc.360buyimg.com/mtd/pc/index/2.0.0/home/images/ico_footer.png);
+        line-height: 1000px;
+    }
+    .mod_copyright_auth_ico_1 {
+        background-position: 0 -151px;
+    }
+    .mod_copyright_auth_ico_2 {
+        background-position: -104px -151px;
+    }
+    .mod_copyright_auth_ico_3 {
+        background-position: 0 -184px;
+    }
+    .mod_copyright_auth_ico_4 {
+        background-position: -104px -184px;
+    }
+    .mod_copyright_auth_ico_5 {
+        background-position: 0 -217px;
+    }
+    .mod_copyright_auth_ico_6 {
+        background-position: -104px -217px;
     }
 }
