--- a/style/index.css
+++ b/style/index.css
@@ -761,34 +761,38 @@ a {
 #seckill .sk-list {
   width: 1000px;
   position: relative; }
-  #seckill .sk-list ul {
+  #seckill .sk-list #list {
+    position: relative;
     width: 6000px; }
+  #seckill .sk-list ul {
+    position: absolute; }
   #seckill .sk-list .sk_controls_item {
     position: absolute;
     display: block;
-    z-index: 1;
+    z-index: 40;
     top: 50%;
-    margin-top: -25px;
     width: 20px;
     height: 50px;
     background: #f1f1f1;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.5);
     line-height: 50px;
     text-align: center; }
     #seckill .sk-list .sk_controls_item .iconfont {
       font-size: 20px;
       color: #272526; }
   #seckill .sk-list .sk_controls_prev {
+    top: 60px;
     left: 7px; }
   #seckill .sk-list .sk_controls_next {
+    top: 60px;
     right: 7px; }
   #seckill .sk-list .sk-item {
     float: left;
     width: 170px;
     height: 225px;
-    padding: 0 14px 0 15px;
     border-right: 1px solid #e7e7e7;
-    position: relative; }
+    position: relative;
+    padding: 0 14px 0 15px; }
     #seckill .sk-list .sk-item div {
       position: relative;
       text-align: center; }
@@ -909,18 +913,36 @@ a {
   height: 100%; }
 
 #mainlt {
-  width: 1000px;
   background: #66ff66;
   margin: 0 auto; }
 
+#mainlt .ftit_inner {
+  overflow: hidden;
+  padding: 0 0 20px;
+  height: 35px;
+  text-align: center;
+  font-size: 24px;
+  line-height: 35px; }
+  #mainlt .ftit_inner h3 {
+    display: inline;
+    padding: 0 50px;
+    background-color: #f6f6f6;
+    font-weight: 400;
+    font-size: 26px;
+    color: #333;
+    font-family: fzzhengheis-el-gbregular; }
 #mainlt .louti {
   height: 600px;
-  width: 1000px;
   font-size: 50px;
   color: #fff;
   font-weight: bold;
   text-align: center;
-  line-height: 600px; }
+  line-height: 600px;
+  border: 2px solid red;
+  background: #C5C5C5; }
+  #mainlt .louti .wrap {
+    background: #005AA0;
+    height: 100%; }
 
 #footer {
   height: 500px;
