--- a/style/index.scss
+++ b/style/index.scss
@@ -905,19 +905,22 @@ a {
         width: 1000px;
         position: relative;
         //      overflow: hidden;
-        ul {
+        #list {
+            position: relative;
             width: 6000px;
+        }
+        ul {
+            position: absolute;
         }
         .sk_controls_item {
             position: absolute;
             display: block;
-            z-index: 1;
+            z-index: 40;
             top: 50%;
-            margin-top: -25px;
             width: 20px;
             height: 50px;
             background: #f1f1f1;
-            background: rgba(0, 0, 0, .1);
+            background: rgba(0, 0, 0, .5);
             line-height: 50px;
             text-align: center;
             .iconfont {
@@ -926,18 +929,20 @@ a {
             }
         }
         .sk_controls_prev {
+            top: 60px;
             left: 7px;
         }
         .sk_controls_next {
+            top: 60px;
             right: 7px;
         }
         .sk-item {
             float: left;
             width: 170px;
             height: 225px;
-            padding: 0 14px 0 15px;
             border-right: 1px solid #e7e7e7;
             position: relative;
+            padding: 0 14px 0 15px;
             div {
                 position: relative;
                 text-align: center;
@@ -1000,7 +1005,6 @@ a {
         display: none;
         position: relative;
         margin: 0 10px 0 0;
-        
         ol {
             position: absolute;
             left: 50%;
@@ -1104,21 +1108,43 @@ a {
 }
 
 #mainlt {
-    width: 1000px;
     background: #66ff66;
     margin: 0 auto;
 }
 
 #mainlt {
+    .ftit_inner {
+        overflow: hidden;
+        padding: 0 0 20px;
+        height: 35px;
+        text-align: center;
+        font-size: 24px;
+        line-height: 35px;
+        h3 {
+            display: inline;
+            padding: 0 50px;
+            background-color: #f6f6f6;
+            font-weight: 400;
+            font-size: 26px;
+            color: #333;
+            font-family: fzzhengheis-el-gbregular;
+        }
+    }
     .louti {
         height: 600px;
-        width: 1000px;
         font-size: 50px;
         color: #fff;
         font-weight: bold;
         text-align: center;
         line-height: 600px;
+        border: 2px solid red;
+        background: #C5C5C5;
+        .wrap {
+            background: #005AA0;
+            height: 100%;
+        }
     }
+    #xpz {}
 }
 
 #footer {
