--- a/style/login.css
+++ b/style/login.css
@@ -215,7 +215,7 @@ li {
     margin: 30px auto;
     position: relative; }
     #main .qrcode-login .zhezhao {
-      display: block;
+      visibility: hidden;
       position: absolute;
       width: 170px;
       background: #000;
@@ -223,11 +223,10 @@ li {
       opacity: .6;
       height: 163px;
       left: 66px;
-      z-index: 9;
+      z-index: 60;
       top: 0;
       text-align: center;
-      line-height: 100px;
-      visibility: hidden; }
+      line-height: 100px; }
     #main .qrcode-login .qrcode1 {
       border: 1px solid #f4f4f4;
       padding: 8px;
@@ -240,7 +239,6 @@ li {
       #main .qrcode-login .qrcode1 img {
         background: #000; }
       #main .qrcode-login .qrcode1 a {
-        display: block;
         background: #e4393c;
         width: 80px;
         height: 30px;
@@ -249,7 +247,7 @@ li {
         left: 42px;
         line-height: 30px;
         visibility: hidden;
-        z-index: 40;
+        z-index: 70;
         color: #fbfbfb; }
     #main .qrcode-login .qrcode-help {
       position: absolute;
