--- a/style/details.scss
+++ b/style/details.scss
@@ -22,9 +22,17 @@
     color: #666;
 }
 
+.clear:after {
+    content: '';
+    display: block;
+    clear: both;
+    height: 0;
+}
+
 a {
     color: #666;
     text-decoration: none;
+    font-size: 12px;
 }
 
 .wrap {
@@ -625,15 +633,39 @@ a {
             font-family: simsun;
         }
         #summary4 {
+            margin: 80px;
             .dt {}
             a {
                 color: #e4393c;
                 margin: 0 6px;
             }
         }
+        #summary5-cart {
+            margin-left: 100px;
+            margin-top: -30px;
+            a {
+                display: block;
+                width: 137px;
+                height: 38px;
+                color: #e4393c;
+                overflow: hidden;
+                position: relative;
+                b {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    cursor: pointer;
+                    background: url(//static.360buyimg.com/item/main/1.0.38/css/i/p-btns.png) no-repeat;
+                }
+            }
+        }
         #summary2,
         #summary3,
-        #summary4 {
+        #summary4,
+        #summary5-cart {
             padding-top: 10px;
         }
     }
@@ -655,7 +687,7 @@ a {
             padding: 0 12px;
             border-left: 1px solid #ddd;
             border-right: 1px solid #ddd;
-            border-top:2px solid red;
+            border-top: 2px solid red;
             color: #e4393c;
             background: white;
             padding: 5px;
